# gld

./: CMakeLists.txt  LICENSE.md  README.md
assets/: Cursor.xcf  arrow_cursor.xcf  battlefield.xcf  catalog.json  spriteatlas.json
include/: AssetManager.h  Battlefield.h  Components.h  ConcurrentQueue.h  Event.h  Game.h  PublishSubscribe.h  Renderer.h  Scheduler.h  Sprite.h  Texture.h  TypeContainer.h  UI.h  Window.h  gld.h
src/: AssetManager.cpp  Battlefield.cpp  Components.cpp  Game.cpp  Scheduler.cpp  UI.cpp  main.cpp
src/integration/SFML/: Renderer.cpp  Renderer.h  Window.cpp  Window.h  Window.hpp
